praxis-rs/tui/src/chatwidget/snapshots/praxis_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Personality
  Choose a communication style for Praxis.

  1. Friendly             Warm, collaborative, and helpful.
› 2. Pragmatic (current)  Concise, task-focused, and direct.

  Press enter to confirm or esc to go back
