praxis-rs/tui/src/chatwidget/snapshots/praxis_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Praxis to do anything                                                      "
"                                                                                "
"  gpt-5.3-codex default · 100% left · /tmp/project                              "
