praxis-rs/tui/src/chatwidget/snapshots/praxis_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
• Working (0s • esc to interrupt)

• Messages to be submitted at end of turn
  ↳ Steer submitted while /review was running.

› Ask Praxis to do anything

  gpt-5.3-codex default · 100% left · /tmp/project
