praxis-rs/tui/src/chatwidget/snapshots/praxis_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› Ask Praxis to do anything                                                      "
"                                                                                "
"  gpt-5.3-codex default · 100% left · /tmp/project                              "
